[package]
name = "logibonist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.31.1"
axum = "0.6.20"
dotenv = "0.15.0"
lambda_http = "0.8.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "json"] }
uuid = { version = "1.4.1", features = ["v4"] }
