[package]
name = "logibonist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "json"] }
# aws-sdk-dynamodb = "0.31.1"
# uuid = { version = "1.4.1", features = ["v4"] }
openssl-sys = "0.9"
openssl = "0.10"

[[bin]]
name  = "challenge"
path = "src/bin/challenge/main.rs"

[[bin]]
name  = "handle_reactions"
path = "src/bin/handle_reactions/main.rs"

[[bin]]
name  = "add_task"
path = "src/bin/add_task/main.rs"

[[bin]]
name  = "send_message"
path = "src/bin/send_message/main.rs"
